test/spec_vectors/simd_i64x2_extmul_i32x4/fail/module_9.wat
(module (func $i64x2.extmul_low_i32x4_u-1st-arg-empty (result v128) (i64x2.extmul_low_i32x4_u (v128.const i64x2 0 0))))